# Full-House

./: .gitignore  CMakeLists.txt  README.md  codecov.yml  cppcheck_report.txt  mainwindow.ui  screenfactory.cpp
App/: CMakeLists.txt  CMakeLists.txt.in  main.cpp  mainwindow.cpp  mainwindow.h  mediaplayer.h  resource.qrc  screenfactory.cpp  screenfactory.h
App/Base/: basefragment.cpp  basefragment.h  basescreensfactory.h  navigator.cpp  navigator.h
App/Fragments/: gamefragment.cpp  gamefragment.h  gamesearchfragment.cpp  gamesearchfragment.h  loginfragment.cpp  loginfragment.h  menufragment.cpp  menufragment.h  registrationfragment.cpp  registrationfragment.h  rulesfragment.cpp  rulesfragment.h  settingsfragment.cpp
App/Game_Elements/: card.cpp  card.h  chips.cpp  chips.h  dealerlogo.cpp  otherplayer.cpp  otherplayer.h  player.cpp  player.h  playerinfolabel.cpp  playerinfolabel.h  playtable.cpp  playtable.h  turnspark.cpp  winlabel.cpp
App/Game_Elements/Gameplay_Buttons/: betbutton.cpp  betbutton.h  betslider.cpp  betslider.h  checkbuttons.cpp  foldbutton.cpp  raisebutton.cpp  raisebutton.h
App/Ui_elements/For_Game/: gotomenubutton.cpp  gotosettingsbutton.cpp
App/Ui_elements/For_Login/: gotoregistrationbutton.cpp  loginbutton.cpp  loginbutton.h  logintextbox.cpp  logintextbox.h  passwordtextbox.cpp  passwordtextbox.h
App/Ui_elements/For_Menu/: gotologinbutton.cpp  gotosettingsbutton.h
App/Ui_elements/For_Registration/: emailtextbox.cpp  emailtextbox.h  registrationbutton.h
App/Ui_elements/For_Search/: connecttoroombutton.cpp  connecttoroombutton.h  gotomenu.cpp  gotomenu.h  gotomenubutton.h  roomidtextbox.cpp  roomidtextbox.h  roompasswordtextbox.h
App/Ui_elements/For_Settings/: gotomenubutton.h  mutebutton.h  playerinfo.cpp  playerinfo.h  volumeslaider.h  volumeslider.cpp  volumeslider.h
App/test/: CMakeLists.txt  test01_mainfunctions.cpp  test02_screenfactory.cpp  test03_navigator.cpp  test04_loginfragment.cpp  test05_registrationfragment.cpp  test06_menu.cpp  test07_settings.cpp  test08_search.cpp  test09_game.cpp  test10_game_elements.cpp  test11_ui_elements.cpp  test12_ui_elements_pt2.cpp
client/project/: CMakeLists.txt
client/project/client_lib/: CMakeLists.txt
client/project/client_lib/include/: client.h  msgmaker.h  tsqueue.h  utils.h
client/project/client_lib/src/: client.cpp  msgmaker.cpp
client/project/client_lib/tests/: CMakeLists.txt
client/project/include/: client.h
client/project/msgfabric_lib/: CMakeLists.txt
client/project/msgfabric_lib/include/: msgmaker.h
client/project/msgfabric_lib/src/: msgmaker.cpp
client/project/src/: main.cpp
client/project/tests/: CMakeLists.txt
client/project/tests/include/: tools.h
client/project/tests/src/: tests_parallel.cpp
client/project/ui_lib/: CMakeLists.txt  Parser.cpp  client_impl.h  mainwindow.cpp  mainwindow.h  resolver.cpp  resolver.h  resource.qrc  screenfactory.cpp  screenfactory.h
client/project/ui_lib/Base/: basefragment.h  basescreensfactory.cpp  navigator.cpp  navigator.h
client/project/ui_lib/Fragments/: creditmenufragment.cpp  creditmenufragment.h  equationsfragment.cpp  equationsfragment.h  gamefragment.cpp  gamefragment.h  gamesearchfragment.cpp  gamesearchfragment.h  loginfragment.cpp  loginfragment.h  menufragment.cpp  menufragment.h  registrationfragment.cpp  registrationfragment.h  rulesfragment.cpp  settingsfragment.cpp  settingsfragment.h
client/project/ui_lib/GameElements/: card.cpp  card.h  otherplayer.cpp  otherplayer.h  player.cpp  playerinfolabel.cpp  playerinfolabel.h  turnspark.cpp  turnspark.h
client/project/ui_lib/GameStatus/: gamestatus.cpp  gamestatus.h
client/project/ui_lib/Game_Elements/: card.cpp  card.h  chips.cpp  dealerlogo.h  otherplayer.cpp  otherplayer.h  player.cpp  player.h  playerinfolabel.cpp  playerinfolabel.h  playtable.h  winlabel.h
client/project/ui_lib/Media/: equations.txt  rules  rules_pt2
database/: CMakeLists.txt  abstract_table.cpp  abstract_table.h  base_database.cpp  base_database.h  main.cpp
database/test/: test01_connection.cpp
database_api/: CMakeLists.txt  Constants.h
database_api/Connection/: Connection.cpp  Connection.h  PoolConnections.cpp  PoolConnections.h  SafetyConnection.cpp  SafetyConnection.h
database_api/FileHandler/: FileHandler.cpp  FileHandler.h  config.txt  db_schema.txt
database_api/Models/: Board.cpp  Board.h  User.cpp  User.h
database_api/tests/: main.cpp  test01_Connection.cpp  test01_FileHandler.cpp  test02_Connection.cpp  test02_User.cpp  test03_Board.cpp  test03_User.cpp  test04_Board.cpp  test05_Extra.cpp
logic/: CMakeLists.txt  CMakeLists.txt.in  main.cpp
logic/GameEntities/: Board.h  Card.cpp  Card.h  Deck.cpp  Deck.h  HandProcess.cpp  HandProcess.h
logic/Player/: HumanPlayer.cpp  HumanPlayer.h  Player.cpp  Player.h  PlayerInterface.h  Profile.h
logic/Utilities/: ConfigurationHandler.cpp  ConfigurationHandler.h  FileLogger.cpp  FileLogger.h  HandConfiguration.h  Log.txt  Logger.cpp  Logger.h  SafeQueue.h
logic/tests/: GameEntities.cpp  Player.cpp  Utilities.cpp  main.cpp
server/project/: CMakeLists.txt
server/project/database_lib/: CMakeLists.txt
server/project/database_lib/Connection/: Connection.cpp  Connection.h  PoolConnections.cpp  PoolConnections.h  SafetyConnection.cpp  SafetyConnection.h
server/project/database_lib/FileHandler/: FileHandler.cpp  FileHandler.h
server/project/database_lib/Models/: Board.cpp  Board.h  User.cpp  User.h
server/project/database_lib/include/: Constants.h
server/project/database_lib/tests/: test02_Connection.cpp  test05_Extra.cpp
server/project/include/: acceptor.h  autorisator.h  definitions.h  gamehandler.h  gameroom.h  handler.h  server.h  tsqueue.h  user.h
server/project/logic_lib/: CMakeLists.txt  input.txt
server/project/logic_lib/GameEntities/: Board.h  Card.cpp  Card.h  Deck.cpp  Deck.h  HandProcess.cpp  HandProcess.h  (+1 more)
server/project/msgfabric_lib/: CMakeLists.txt
server/project/server_lib/: CMakeLists.txt
server/project/src/: main.cpp  tsqueue.cpp
server/project/tests/: CMakeLists.txt
(+131 files in other folders)
