cmake_minimum_required(VERSION 3.17)
project(cpp_project)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "-Wpedantic -fprofile-arcs -ftest-coverage -I/usr/include/cppconn -L/usr/lib -lmysqlcppconn")
add_executable(cpp_project main.cpp base_database.cpp base_database.h abstract_table.cpp abstract_table.h test/test01_connection.cpp test/main.cpp)

set(SOCI_CXX11 ON CACHE BOOL "Build to the C++11 standard")
set(WITH_MYSQL ON)
set(MYSQL_INCLUDE_DIR /usr/include/)

set(Boost_INCLUDE_DIR /usr/include/)
find_package(Boost)
if(Boost_FOUND)
    message("Boost is OK: ${Boost_INCLUDE_DIRS}")
    include_directories(${Boost_INCLUDE_DIRS})
endif()

find_package(PkgConfig REQUIRED)
pkg_check_modules(MySQL REQUIRED)
if (MySQL_FOUND)
    message("MySQL is OK: ${MySQL_INCLUDE_DIRS}")
    include_directories(${MySQL_INCLUDE_DIR})
endif()

find_package(SOCI REQUIRED)
#pkg_check_modules(Soci REQUIRED)
if (SOCI_FOUND)
    message("Soci is OK: ${SOCI_INCLUDE_DIRS}")
    include_directories(${SOCI_INCLUDE_DIR})
    target_link_libraries(cpp_project PRIVATE SOCI::soci_core)
endif()

include_directories(${GTEST_INCLUDE_DIRS})
